# Rust-WGPU-Game-Engine

./: Cargo.toml
slotmap/: Cargo.toml
slotmap/src/: free_list.rs  lib.rs
src/: engine.rs  engine_time.rs  lib.rs  main.rs  runtime.rs
src/color/: hsla.rs  mod.rs  rgba.rs
src/engine/: engine_time.rs  engine_timer.rs  mod.rs  op_time.rs  operation_timer.rs  time.rs
src/entity_component/: EntityComponent_System.md  mod.rs
src/font/: font_atlas.rs  font_characters.rs  font_layout.rs  font_load_gpu.rs  mod.rs
src/graphics/: mod.rs  render_surface.rs  render_texture.rs  texture.rs
src/graphics/copy_texture_to_surface/: mod.rs
src/gui/: gui_structure.md  gui_structure.txt  mod.rs
src/gui/rect_renderer/: collection.rs  cpu_gpu_buffer.rs  material.rs  mod.rs  rect_collection.rs  render_pass.rs  render_textures.rs  shader.wgsl  slotmap.rs  system.rs
src/gui/rect_ui/: collection.rs  cpu_gpu_buffer.rs  element.rs  event.rs  graphic.rs  material.rs  mod.rs  render_pass.rs  render_textures.rs  shader.wgsl  shader_copy.wgsl  slotmap.rs  system.rs  texture_atlas.rs
src/gui/rect_ui/element/: builder.rs  mod.rs
src/gui/renderable_elements/: collection.rs  cpu_gpu_buffer.rs  mod.rs  rect.rs  texture_atlas.rs
src/gui/renderable_elements/rect/: collection.rs  mod.rs
src/math_utils/: mod.rs
src/render_system/: mod.rs  render_texture.rs  render_window.rs  texture.rs  utils.rs
src/render_system/copy_texture_to_surface/: copy_texture_to_surface_shader.wgsl  mod.rs
src/slotmap/: free_list.rs  mod.rs  slot_index_types.rs  slotmap.rs  tests.rs
