[package]
name = "rwge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
tobj = "3.0"
rand = "0.8.0"
fontdue = "0.6.4"
sdf_glyph_renderer = "0.2.0"
rayon = "1.5.1"
anymap = "0.12.1"
serde = "1.0.136"
serde_json = "1.0"
slotmap = { version = "1.0.6", features = ["serde"] }
half = "1.8.2"
glam = { version = "0.20.5", features = ["bytemuck", "rand", "serde"] }