[package]
name = "rwge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# image = "0.23"
winit = "0.26"
wgpu = "0.12"
pollster = "0.2"
rand = "0.8.0"
fontdue = "0.6.4"
sdf_glyph_renderer = "0.2.0"
rayon = "1.5.1"
serde = "1.0.136"
serde_json = "1.0"
half = "1.8.2"

[dependencies.bytemuck]
version = "1.4"
features = [ "derive" ]

[dependencies.glam]
version = "0.20.5"
features = ["bytemuck", "rand", "serde"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]